# tiktok-ads-mcp

./: .env.example  .gitignore  Dockerfile  Dockerfile.prod  LICENSE  MCP_USAGE.md  Procfile  README.md  deploy.sh  docker-compose.yml  env.template  fly.toml  nginx.conf  pyproject.toml  railway.toml  render.yaml  requirements.txt  test_remote_server.py
examples/: basic_usage.py
tiktok_ads_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  main.py  remote_main.py  remote_server.py  server.py
tiktok_ads_mcp/tools/: __init__.py  get_ad_groups.py  get_ads.py  get_authorized_ad_accounts.py  get_business_centers.py  get_campaigns.py  reports.py
