[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktok-ads-mcp"
version = "0.1.2"
authors = [
  { name = "Yu Shengnan", email = "yushengnan0525@gmail.com" },
]
description = "Model Context Protocol (MCP) plugin for interacting with TikTok Ads API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["tiktok", "ads", "mcp", "api", "marketing", "advertising", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "requests>=2.32.3",
    "python-dotenv>=1.0.0",
    "mcp>=1.9.0",
    "pandas>=2.2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "authlib>=1.2.1",
    "cryptography>=41.0.0",
    "pydantic>=2.5.0",
    "gunicorn>=21.2.0",
]

[project.scripts]
tiktok-ads-mcp = "tiktok_ads_mcp.main:cli"
tiktok-ads-mcp-remote = "tiktok_ads_mcp.remote_main:cli"

[project.urls]
Homepage = "https://github.com/ysntony/tiktok-ads-mcp"
Repository = "https://github.com/ysntony/tiktok-ads-mcp"
Documentation = "https://github.com/ysntony/tiktok-ads-mcp#readme"
"Bug Tracker" = "https://github.com/ysntony/tiktok-ads-mcp/issues"
"Changelog" = "https://github.com/ysntony/tiktok-ads-mcp/blob/main/README.md#changelog"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "twine>=4.0.0",
    "build>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tiktok_ads_mcp*"]

[tool.setuptools.package-data]
tiktok_ads_mcp = ["*.json", "*.yaml", "*.yml"]